--- a/core/templates/core/common/header_blog.html
+++ b/core/templates/core/common/header_blog.html
@@ -1,52 +1,23 @@
 {% load static %}
-<!--       ############## NAVBAR ############### 		-->
+<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-gradient-light">
-
 	<a class="collapse navbar-collapse" id="navbarImg" href="{% url 'index' %}"><img  src="{% static 'img/logo_emakers_preta.png' %}" height="40em"></a>
-
 	<div class="container">
-
 		<a class="navbar-brand h1 mb-0" href="{% url 'blog' %}"> Blog </a>
-
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite,#navbarImg">
-
 			<span class="navbar-toggler-icon"></span>	
-
 		</button>
 
 		<div class="collapse navbar-collapse" id="navbarSite">
-
 			<ul class="navbar-nav mr-auto">
-
-				
 				<li class="nav-item mr-2">
 					<a class="nav-link" href="{% url 'index' %}">Home</a>
-				</li>
-				
-				<li class="nav-item dropdown mr-2">
-					<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="navDrop">Artigos</a>
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="#">Eletrônica</a>
-						<a class="dropdown-item" href="#">Desenvolvimento Mobile</a>
-						<a class="dropdown-item" href="#">Linguagens</a>
-						<a class="dropdown-item" href="#">Ferramentas</a>
-					</div>
-				</li>
-
-				<li class="nav-item dropdown mr-2">
-					<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="navDrop">Cursos</a>
-					<div class="dropdown-menu">
-						<a class="dropdown-item" href="#">Eletrônica</a>
-						<a class="dropdown-item" href="#">Desenvolvimento Mobile</a>
-						<a class="dropdown-item" href="#">Linguagens</a>
-						<a class="dropdown-item" href="#">Ferramentas</a>
-					</div>
 				</li>
 				<li class="nav-item mr-2">
 					<a class="nav-link" href="{% url 'equipe' %}">Equipe</a>
 				</li>
 				<li class="nav-item mr-2">
-					<a class="nav-link" href="{% url 'contato' %}">Contato</a>
+					<a class="nav-link" href="{% url 'contato' %}">Fale Conosco</a>
 				</li>
 			</ul>
 
