--- a/core/templates/core/404.html
+++ b/core/templates/core/404.html
@@ -1,10 +1,10 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-{% include 'core/common/head.html' %}
+	{% include 'core/common/head.html' %}
 <body>
-<!--       ############## NAVBAR ############### 		-->
-{% include 'core/common/header.html' %}
+	<!-- Navbar -->
+	{% include 'core/common/header.html' %}
 
     <div class="container">
         <div class="section-header ">
@@ -13,5 +13,4 @@
         </div>
     </div>
 </body>
-
 </html>
