--- a/core/templates/core/500.html
+++ b/core/templates/core/500.html
@@ -1,10 +1,10 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-{% include 'core/common/head.html' %}
+	{% include 'core/common/head.html' %}
 <body>
-<!--       ############## NAVBAR ############### 		-->
-{% include 'core/common/header.html' %}
+	<!-- Navbar -->
+	{% include 'core/common/header.html' %}
     <div class="container">
         <div class="section-header">
             <h2 class="section-title text-center wow fadeInDown">500 - Erro no processamento</h2>
