--- a/core/templates/core/common/footer_blog.html
+++ b/core/templates/core/common/footer_blog.html
@@ -1,7 +1,7 @@
 {% load static %}
 <footer class="py-5 bg-dark">
 	<div class="container">
-		<p class="m-0 text-center text-white">EMakers</p>
+		<p class="m-0 text-center text-white">© 2018 EMakers Júnior</p>
 	</div>
 </footer>
 
