--- a/core/templates/core/common/head_blog.html
+++ b/core/templates/core/common/head_blog.html
@@ -1,7 +1,8 @@
 {% load static %}
 <head>
 	<meta charset="utf-8">
+	<link rel="icon" href="{% static 'img/favicon.png' %}"/>
 	<link rel="stylesheet" type="text/css" href="{% static 'node_modules/bootstrap/compiler/bootstrap.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'node_modules/bootstrap/compiler/style.css' %}">
-	<title>EMakers</title>
+	<title>EMakers Jr.</title>
 </head>
