--- a/core/templates/core/common/footer.html
+++ b/core/templates/core/common/footer.html
@@ -1,1 +1,6 @@
 {% load static %}
+<footer class="py-5 bg-dark">
+    <div class="container">
+        <p class="m-0 text-center text-white">© 2018 EMakers Júnior</p>
+    </div>
+</footer>
