--- a/core/templates/core/common/header.html
+++ b/core/templates/core/common/header.html
@@ -2,7 +2,7 @@
 
 <!-- Navbar -->
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-gradient-light">
-	<a class="collapse navbar-collapse" id="navbarImg" href="{% url 'index' %}"><img  src="{% static 'img/logo_emakers_preta.png' %}" height="40em"></a>
+	<a class="collapse navbar-collapse" id="navbarImg" href="{% url 'index' %}"><img  src="{% static 'img/mini_emakersjr_logo_dark.png' %}" height="40em"></a>
 	<div class="container">
 		<a class="navbar-brand h1 mb-0" href="{% url 'index' %}"> Home </a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite,#navbarImg">
@@ -16,7 +16,7 @@
 				</li>
 
 				<li class="nav-item mr-2">
-					<a class="nav-link" href="{% url 'index' %}#portfolio">Portfolio</a>
+					<a class="nav-link" href="{% url 'index' %}#portfolio">Portfólio</a>
 				</li>
 
 				<li class="nav-item mr-2">
@@ -41,3 +41,5 @@
 		</div>
 	</div>
 </nav>
+
+<br>
